# Dynamis

./: README.MD
example/ex_OFE8nodeLinear/: CMakeLists.txt  main.cpp  mesh_slenderRing.txt
include/: Combination.h  ConstitutiveLaw.hpp  FE8nodeICM.h  LinearElasticity.h  LinearElasticity.hpp  Mesh.h  Node.h  Nodes.h  OFE8nodeLinear.h  PreProcessing.h  Preprocessing.hpp  RCMordering.h  Utility.hpp
src/: ConstitutiveLaw.cpp  FE8nodeICM.cpp  LinearElasticity.cpp  Mesh.cpp  Nodes.cpp  OFE8nodeLinear.cpp  PreProcessing.cpp
